fixed overflow in learning section. adjusted layouts in app and [userId]

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: #ccc;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
